# Rhythmic-Ranker

./: CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  LICENSE  README.md
SE/: README.md
SI/: .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md
SI/api/: .dockerignore  .env  .env.example  .gitignore  DEPLOY.md  README.md  package-lock.json  package.json  start.ps1  start.sh
SI/api/src/: index.html  index.js
SI/api/src/routes/: health.js  metrics.js
SI/app/: package.json  tailwind.config.js
SI/app/src/app/: layout.js
SI/app/test/: metrics.js
SI/infra/: DEPLOY.md
SI/infra/helm/api/: Chart.yaml
SI/infrastructure/: start.ps1  start.sh
SI/infrastructure/helm/api/: values.yaml
SI/interface/: .env.example  DEPLOY.md  backend.py  index.html  requirements.txt  start.ps1  start.sh
app/: package-lock.json  package.json
app/src/app/: layout.js  page.js
app/src/app/components/: Footer.js  Header.js  Navbar.js
app/src/app/metrics/: page.js
app/src/app/styles/: global.css
app/test/: api.js  client.js
design/: README.md  design_v5.stl
electronics/: CHANGELOG.md  README.md
software/: .env.example  CHANGELOG.md  README.md  start.ps1  start.sh
software/api/: Dockerfile  README.md  package.json  start.ps1  start.sh
software/api/src/: index.html  index.js
software/api/test/: docs.js  health.js  metrics.js
software/infrastructure/: start.ps1  start.sh
software/interface/: README.md  backend.py  pyproject.toml  requirements.txt  start.ps1  start.sh  test_app.py
software/interface/templates/: docs.html  index.html
(+17 files in other folders)
