[tool.poetry]
name = "rythmic-ranker"
version = "1.0.0"
description = "Backend and InfluxDB exploiter for jury interface"
authors = ["tristanqtn <tristan.querton@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
influxdb-client = "^1.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
